[tool.poetry]
name = "repl_python3_testtest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
telebot = "^0.0.4"
pyTelegramBotAPI = "^3.8.3"
pytz = "^2021.1"
spotipy = "^2.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
